# codt-experiments

./: .gitignore  .gitmodules  README.md  generate_sbatch.py  juliapkg.json  main.py  plot.py  plot_dataset_info.py  plot_mse.py  plot_optimal_mse.py  pyproject.toml  run.py  setup.py  util.py
QuantBnBWrapper/: Project.toml
QuantBnBWrapper/src/: QuantBnBWrapper.jl
datasets/regression/casp/: 0.csv  1.csv  2.csv  3.csv  4.csv
datasets/regression/concrete/: 0.csv  1.csv  2.csv  3.csv  4.csv
datasets/regression/energy/: 0.csv  1.csv  2.csv  3.csv  4.csv
datasets/regression/fish/: 0.csv  1.csv  2.csv  3.csv  4.csv
datasets/regression/gas/: 0.csv  1.csv  2.csv  3.csv  4.csv
datasets/regression/grid/: 0.csv  1.csv  2.csv  3.csv  4.csv
datasets/regression/news/: 0.csv  1.csv  2.csv  3.csv  4.csv
results/: ablation_codt_d234_15m.json  ablation_codt_d234_30m.json  ablation_codt_d234_5m.json  generalisation_cart_d23420constant.json  generalisation_cart_d23420path.json  generalisation_cart_d23inf.json  generalisation_codt_d2_10m.json  generalisation_codt_d2_4h.json  generalisation_codt_d34_4h.json  quantbnb_classification_10m.json  quantbnb_regression_10m.json  runtime_others_d234_30m.json
scripts/: simple.py
src/: data.py  julia_compile.py  simple.py  util.py
src/methods/: __init__.py  base.py  cart.py  codt.py  contree.py  quantbnb.py
src/plot/: __init__.py  ablation.py  debug.py  generalisation.py  perf.py  plot_dataset_info.py
src/setup/: __init__.py  ablation.py  all_quantbnb.py  debug.py  generalisation.py  others.py  scalability.py
(+10 files in other folders)
