[project]
name = "codt-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autorank>=1.3.0",
    "codt @ file:///${PROJECT_ROOT}/codt",
    "juliacall>=0.9.24",
    "pycontree @ file:///${PROJECT_ROOT}/contree",
    "seaborn>=0.13.2",
]
